# Astar

./: Cargo.toml
chain-extensions/block-number-provider/: Cargo.toml
chain-extensions/block-number-provider/src/: lib.rs  weights.rs
chain-extensions/pallet-nfts/: Cargo.toml
chain-extensions/pallet-nfts/src/: lib.rs  weights.rs
chain-extensions/pallet-uniques/: Cargo.toml
chain-extensions/pallet-uniques/src/: lib.rs  weights.rs
chain-extensions/types/nfts/: Cargo.toml
chain-extensions/types/nfts/src/: lib.rs
chain-extensions/types/uniques/: Cargo.toml
chain-extensions/types/uniques/src/: lib.rs
pallets/xc-asset-config/src/: lib.rs  migrations.rs
runtime/local/: Cargo.toml
runtime/local/src/: chain_extensions.rs  lib.rs
runtime/local/src/weights/: mod.rs  pallet_uniques.rs
runtime/shibuya/: Cargo.toml
runtime/shibuya/src/: chain_extensions.rs  lib.rs  xcm_config.rs
runtime/shibuya/src/weights/: mod.rs
runtime/shiden/: Cargo.toml
runtime/shiden/src/: chain_extensions.rs  lib.rs  xcm_config.rs
runtime/shiden/src/weights/: mod.rs
