[package]
name = "chain-extension-block-number-provider"
version = "0.1.0"
license = "Apache-2.0"
description = "Relay chain block number provider chain extension for WASM contracts"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
cumulus-pallet-parachain-system ={ workspace = true }
log = { workspace = true }
num-traits = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-contracts = { workspace = true }
pallet-contracts-primitives = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

[features]
default = ["std"]
std = [
	"cumulus-pallet-parachain-system/std",
	"parity-scale-codec/std",
	"num-traits/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-contracts/std",
	"pallet-contracts-primitives/std",
	"scale-info/std",
	"sp-std/std",
	"sp-core/std",
	"sp-runtime/std",
]
local = []
